@@ -202,7 +202,7 @@ Transform:
   m_PrefabAsset: {fileID: 0}
   m_GameObject: {fileID: 1091082876}
   m_LocalRotation: {x: 0.7071068, y: 0, z: 0, w: 0.7071068}
-  m_LocalPosition: {x: 0, y: 25, z: 0}
+  m_LocalPosition: {x: 0, y: 40, z: 0}
   m_LocalScale: {x: 1, y: 1, z: 1}
   m_Children: []
   m_Father: {fileID: 0}
@@ -253,7 +253,7 @@ MonoBehaviour:
   m_Script: {fileID: 11500000, guid: 732f130bbc2ec634f9b906443faa01d6, type: 3}
   m_Name: 
   m_EditorClassIdentifier: 
-  maxHeight: 40
+  maxHeight: 80
   minHeight: 10
   speed: 10
 --- !u!1 &1739531822
@@ -300,8 +300,9 @@ MonoBehaviour:
   m_Name: 
   m_EditorClassIdentifier: 
   tilePrefab: {fileID: 8158545161381126986, guid: 32d021938304c4b4ea657dcfc1d45579, type: 3}
-  gridDimensions: {x: 25, y: 25}
+  gridDimensions: {x: 50, y: 50}
   tileSpacing: 1
+  parititonDepth: 5
 --- !u!1 &2023005547
 GameObject:
   m_ObjectHideFlags: 0
