@@ -1,0 +1,8 @@
+fileFormatVersion: 2
+guid: 2a23090f5c7b4f946847109243a1270c
+folderAsset: yes
+DefaultImporter:
+  externalObjects: {}
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
