@@ -1,0 +1,11 @@
+fileFormatVersion: 2
+guid: 4b8b9bfaa83f24b4baab55eb436b811c
+MonoImporter:
+  externalObjects: {}
+  serializedVersion: 2
+  defaultReferences: []
+  executionOrder: 0
+  icon: {instanceID: 0}
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
