@@ -1,0 +1,11 @@
+fileFormatVersion: 2
+guid: b1fda7577e738f14194475ce20278d86
+MonoImporter:
+  externalObjects: {}
+  serializedVersion: 2
+  defaultReferences: []
+  executionOrder: 0
+  icon: {instanceID: 0}
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
