@@ -9,6 +9,8 @@ public class TileGrid : MonoBehaviour
     public Vector2Int gridDimensions;
     public float tileSpacing = 1;
     private Vector3 gridCorner;
+    private List<Partition> partitions = new List<Partition>();
+    public int parititonDepth = 1;
     private enum GridState
     {
         inactive, 
@@ -23,11 +25,13 @@ public class TileGrid : MonoBehaviour
         gridDimensions.y = Mathf.Clamp(gridDimensions.y,1,50);
         gridCorner = Vector3.zero - new Vector3(gridDimensions.x / 2, 0, gridDimensions.y / 2);
         GenerateGrid();
+        PartitionGrid(parititonDepth);
+        PaintPartitions();
     }
     public void GenerateGrid()
     {
         //Clear tile grid
-        if(tiles != null){foreach(Tile currTile in tiles){currTile.DenInitialise();}}
+        DeleteGrid();
         //Re initialise grid
         tiles = new Tile[gridDimensions.x,gridDimensions.y];
         //Generate tiles
@@ -37,18 +41,83 @@ public class TileGrid : MonoBehaviour
                 Vector2Int coords = new Vector2Int(i,j);
                 Vector3 worldPos = gridCorner + new Vector3(i * tileSpacing, 0, j * tileSpacing);
                 GameObject obj = Instantiate(tilePrefab,worldPos,Quaternion.identity);
-                int rnd = Random.Range(0,100);
-                bool active = rnd > 50 ? true : false;
-                Tile newTile = new Tile(coords,obj,active);
-                Color col = active ? Color.white : Color.grey;
-                newTile.SetColor(col);
+                Tile newTile = new Tile(coords,obj,false);
+                newTile.SetColor(Color.grey);
                 tiles[i,j] = newTile;
             }
         }
     }
-    void Update()
+    public void ResetGrid()
     {
-        if(Input.GetKeyDown(KeyCode.Space))
-            GenerateGrid();
+        foreach(Tile tile in tiles)
+        {
+            tile.SetActive(false);
+            tile.SetColor(Color.grey);
+        }
+    }
+    public void DeleteGrid()
+    {
+        if(tiles == null){return;}
+        foreach(Tile tile in tiles)
+        {
+            tile.DenInitialise();
+        }
+    }
+    public void PlaceRoom()
+    {
+        int xSize = Random.Range(2,5);
+        int ySize = Random.Range(2,5);
+        int xCorner = Random.Range(0, gridDimensions.x - xSize);
+        int yCorner = Random.Range(0, gridDimensions.y - ySize);
+        Vector2Int corner = new Vector2Int(xCorner,yCorner);
+        for(int i = 0; i < xSize; i++){
+            for(int j = 0; j < ySize; j++)
+            {
+                Vector2Int pos = corner + new Vector2Int(i,j);
+                tiles[pos.x,pos.y].SetActive(true);
+                tiles[pos.x,pos.y].SetColor(Color.white);
+            }
+        }
+    }
+    public void PartitionGrid(int depth = 2)
+    {
+        bool partitionDirection = false;
+        partitions = new List<Partition>();
+        Partition master = new Partition(Vector2Int.zero, gridDimensions);
+        List<Partition> parititonsToBisect = new List<Partition>();
+        List<Partition> temp = new List<Partition>();
+        parititonsToBisect.Add(master);
+        partitions.Add(master);
+        for(int i = 0; i < depth; i++)
+        {
+            temp.Clear();
+            foreach(Partition currPartition in parititonsToBisect)
+            {
+                if(!currPartition.isBisectable()){continue;}
+                float rnd = Random.Range(0,10);
+                partitionDirection = rnd > 5 ? true : false;
+                List<Partition> children = currPartition.bisectPartition(partitionDirection);
+                currPartition.SetChildren(children);
+                temp.AddRange(children);
+            }
+            parititonsToBisect.Clear();
+            parititonsToBisect.AddRange(temp);
+            partitions.AddRange(temp);
+        }
+    }
+    public void PaintPartitions()
+    {
+        foreach(Partition p in partitions)
+        {
+            if(p.children.Count != 0){continue;}
+            Color col = Random.ColorHSV();
+            for(int i = 0; i < p.dimensions.x; i++){
+            for(int j = 0; j < p.dimensions.y; j++)
+            {
+                Vector2Int coords = p.corner + new Vector2Int(i,j);
+                tiles[coords.x,coords.y].SetColor(col);
+            }
+            }
+        }
     }
 }
